# pymodaq_plugins_pyrpl

./: .gitignore  AGENTS.md  ARCHITECTURAL_FIX_SUMMARY.md  ARCHITECTURE_REVISION.md  CLAUDE.md  COMMAND_MULTIPLEXING_IMPLEMENTATION.md  COMPLETE_HARDWARE_VALIDATION.md  COMPLETE_IPC_PLUGIN_SUITE.md  FINAL_HARDWARE_TEST_RESULTS.md  FINAL_TEST_SUMMARY.md  FINAL_VALIDATION_REPORT.md  GEMINI_QUERY.md  GEMINI_RESPONSE.md  HANDOFF_SUMMARY.md  HARDWARE_CONNECTION_FIX_REPORT.md  HARDWARE_MODE_FIX.md  HARDWARE_TESTING_COMPLETE_REPORT.md  HARDWARE_TEST_FINAL_REPORT.md  HARDWARE_TEST_RESULTS.md  HARDWARE_TEST_SESSION_2025-10-08.md  HARDWARE_TEST_STATUS.md  HARDWARE_VALIDATION_COMPLETE.md  HARDWARE_VALIDATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_CONTEXT.md  MULTI_DROID_SETUP.md  MULTI_MODEL_CONSENSUS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PYRPL_EXTENSIONS_README.md  PYRPL_FIX_SUMMARY.md  PYRPL_INTEGRATION_PRESENTATION.html  PYRPL_PYMODAQ_INTEGRATION_PLAN.md  PYRPL_REFACTORING_ROADMAP.md  QUICK_START.md  README.md  README.rst  REVISED_DEVELOPMENT_PLAN.md  SCOPE_PLUGIN_IMPLEMENTATION.md  SHARED_WORKER_ARCHITECTURE.md  SSH_CONNECTION_FIX.md  (+53 more)
.claude/: settings.local.json
.serena/: project.yml
archive/: README.md
deprecated_docs/: COMMAND_MULTIPLEXING_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DROID_TASK_BREAKDOWN.md  HARDWARE_TESTING_QUICKSTART.md  LAUNCH_DASHBOARD.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASED_DEVELOPMENT_PLAN.md  PR_DESCRIPTION.md  PYRPL_TCP_ARCHITECTURE.md  PYRPL_WORKER_SAFEGUARDS.md  (+4 more)
(+215 files in other folders)
