[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymodaq_plugins_pyrpl"
version = "1.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A PyMoDAQ plugin for PyRPL."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymodaq",
    "stemlab @ git+https://github.com/ograsdijk/StemLab.git",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/your-username/pymodaq-plugins-pyrpl"
"Bug Tracker" = "https://github.com/your-username/pymodaq-plugins-pyrpl/issues"

[project.entry-points."pymodaq.plugins"]
pyrpl = "pymodaq_plugins_pyrpl"

[project.scripts]
pyrpl_bridge_server = "pymodaq_plugins_pyrpl.launchers.pyrpl_bridge_server:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "hardware: marks tests as requiring real hardware to run",
]
